# multi-agent-research-analyst

./: .gitignore  README.md  pyproject.toml
agents/: base_agent.py  critic_agent.py  earnings_call_agent.py  news_agent.py  orchestrator.py  sec_filings_agent.py  synthesis_agent.py
api/: main.py  schemas.py
api/routes/: health.py  research.py  stream.py
core/: config.py  models.py
core/retrieval/: hybrid_search.py  reranker.py  vectorstore.py
evals/: dataset.py  metrics.py  run_evals.py
ingestion/: chunker.py  embedder.py  loaders.py  pipeline.py
scripts/: ingest_news.py  ingest_sec.py  ingest_transcripts.py
tests/: test_agents.py  test_api.py  test_retrieval.py
ui/: app.py
