[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-research-analyst"
version = "0.1.0"
description = "Multi-agent RAG system for company research using SEC filings, earnings calls, and news"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core AI
    "anthropic>=0.40.0",
    "voyageai>=0.3.0",

    # Vector DB & Retrieval
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",

    # Document Processing
    "pymupdf>=1.24.0",          # PDF parsing (fitz)
    "tiktoken>=0.7.0",          # Token counting for chunking

    # Data & Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",            # Async HTTP (SEC EDGAR, NewsAPI)

    # UI
    "streamlit>=1.36.0",

    # Utilities
    "structlog>=24.2.0",
    "tenacity>=8.3.0",          # Retry logic for API calls
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",             # Pretty CLI output
    "typer>=0.12.0",            # CLI for scripts

    # SEC Data
    "sec-edgar-downloader>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ragas>=0.1.14",            # RAG evaluation metrics
    "ruff>=0.5.0",              # Linting
    "mypy>=1.10.0",             # Type checking
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core*", "ingestion*", "api*", "evals*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
